monitoring/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: monitoring
  namespace: monitoring
spec:
  rules:
    - http:
        paths:
          - path: /grafana/(.*)
            backend:
              serviceName: mon-grafana
              servicePort: 80
    - host: "*.au.alterosmart.dev"
      http:
        paths:
          - path: /grafana/(.*)
            backend:
              serviceName: mon-grafana
              servicePort: 80
          - path: /prometheus/(.*)
            backend:
              serviceName: mon-prometheus-operator-prometheus
              servicePort: 9090
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - "*.au.alterosmart.dev"
      secretName: tls-monitoring-secret
